--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,16 +3,7 @@ title: Introduction
 description: 'Welcome to the home of your new documentation'
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.svg"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.svg"
-  alt="Hero Dark"
-/>
+<img src="images/patient-with-child.jpeg" alt="Patient" />
 
 ## Setting up
 
