--- a/responses/fax.mdx
+++ b/responses/fax.mdx
@@ -4,6 +4,9 @@ description: 'Faxing'
 icon: 'fax'
 ---
 
-## Basics
+## Setup
 
-Fill in details
+We are able to fax to any HIPAA-compliant fax number (either physical or virtual). Simply provide us with the number
+you would like your documents delivered to.
+
+<Warning>Delivery via fax is supported, however, it provides a lower level of experience and should be avoided when possible.</Warning>
