--- a/product/medical-summary-pdf.mdx
+++ b/product/medical-summary-pdf.mdx
@@ -1,5 +1,5 @@
 ---
 title: 'Medical Summary PDF'
 description: 'Summarized medical information delivered on a PDF'
-icon: 'list-check'
+icon: 'hospital-user'
 ---
