--- a/product/quality-gap-closure-pdf.mdx
+++ b/product/quality-gap-closure-pdf.mdx
@@ -1,5 +1,5 @@
 ---
 title: 'Quality Gap Closure PDF'
 description: 'Quality gap closures delivered on a PDF'
-icon: 'list-check'
+icon: 'star'
 ---
