--- a/implementation/pilot-process.mdx
+++ b/implementation/pilot-process.mdx
@@ -3,3 +3,52 @@ title: 'Pilot Process'
 description: 'Overview of how the pilot process works'
 icon: 'magnifying-glass'
 ---
+
+# Introduction
+This section serves as a guide to a Connective Health Proof of Concept to demonstrate the viability and potential
+impact of implementing the Connective Health Service within your healthcare organization.
+
+# Objective
+The primary objective of this Proof of Concept is to showcase how the Connective Health Care Summary can address key
+challenges and enhance operational efficiency in your care delivery. Through a controlled and focused implementation,
+we aim to provide tangible evidence of the product's capabilities in improving user experience, patient care, and
+workflow efficiency.
+
+# Scope of the Proof of Concept
+This PoC will be conducted within a controlled, point in time, environment, focusing on a defined subset of
+functionalities to provide a clear understanding of the product's potential benefits.
+It is important to note that the PoC is not a comprehensive deployment but rather a strategic exploration to
+validate key aspects of the Connective Health Care Summary Service.
+
+# Expected Outcomes
+By the conclusion of this PoC, we anticipate gaining insights into the feasibility, performance, and user acceptance of
+The Connective Health Care Summary Service. This information will inform decision-makers on the viability of a
+full-scale implementation and provide valuable data for planning and resource allocation.
+Upon completion of the PoC, Connective Health will provide the user with a read out including findings and analyses.
+
+We encourage active participation and feedback from all stakeholders involved in this PoC.
+Your input will be instrumental in shaping the future direction of the Connective Health Care Summary
+Service and ensuring its alignment with the unique needs of your healthcare organization.
+
+# High Level Steps
+
+<Steps>
+    <Step title="Complete contract / BAA">
+        * Execute a no fees contract and BAA for the period of the Proof of Concept
+    </Step>
+    <Step title="Define PoC team">
+        * Customer is required to have a project lead, clinical participant, and technical participant included in subsequent PoC discussions
+        * Establish timeline and subsequent Review of Results 1 hour discussion (suggest 7 days following receipt of information)
+    </Step>
+    <Step title="Patient Population Selection">
+        * Project lead partners with Connective Health to identify a representative mix of patients and appropriate size for the PoC
+        * Customer to provide demographics according to template provided
+    </Step>
+    <Step title="Workflow and clinical discussions">
+        * Connective Health partner with technical contact to review existing workflow
+        * Connective Health clinical team to connect with customer clinical team to define clinical priorities ahead of analysis and read out
+    </Step>
+    <Step title="Review of Results">
+        * Group discussion to review findings and analyses
+    </Step>
+</Steps>
