--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,4 +3,7 @@ title: Introduction
 description: 'Welcome to the Connective Health documentation site'
 ---
 
+This site contains all the information needed to work with Connective Health's products
+and technology. We encourage you to contact us if you have any questions!
+
 <img src="images/patient-with-child.jpeg" alt="Patient" />
