--- a/implementation/getting-started.mdx
+++ b/implementation/getting-started.mdx
@@ -6,12 +6,14 @@ icon: 'circle-play'
 
 # Welcome
 
-Welcome to the Connective Health Implementation Guide, a comprehensive resource designed to assist you in
-successfully implementing the Connective Health Care Summary Service. This guide is intended for project managers, product managers,
-and engineers who are involved in the deployment and utilization of the service.
+Welcome to the Connective Health Guide, a comprehensive resource designed to assist you in successfully
+implementing the Connective Health Care Summary Service. This guide is intended for project managers,
+product managers, and engineers who are involved in the deployment and utilization of the service.
 
 This section is structured to provide an introduction of what to expect with your implementation process.
-Processes may vary according to customer and use case and we look forward to working with you to meet your needs. This section is accompanied by relevant examples, tips, and troubleshooting advice to address common challenges in the implementation process.
+Processes may vary according to customer and use case and we look forward to working with you to meet your needs.
+This section is accompanied by relevant examples, tips, and troubleshooting advice to address common challenges
+in the implementation process.
 
-If you have any questions or encounter difficulties along the way, please reach out to your account representative
-for assistance.
+If you have any questions or encounter difficulties along the way, please reach out to your account
+representative for assistance.
