--- a/implementation/sample-project-steps.mdx
+++ b/implementation/sample-project-steps.mdx
@@ -7,8 +7,8 @@ icon: 'stairs'
 # Sample Implementation Project Steps
 
 Implementation steps may vary according to use case and integration methods elected.
-Below is a sample implementation project with what to expect when implementing the
-Connective Health Care Summary service.
+Below is a sample implementation project with what to expect when implementing
+the Connective Health Care Summary service.
 
 <Steps>
     <Step title="Project Kick off meeting">
