--- a/implementation/integration-options.mdx
+++ b/implementation/integration-options.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Integration Options'
 description: 'How to get interact with Connective Health Services'
-icon: 'circle-play'
+icon: 'link'
 ---
 
 # Request
