--- a/implementation/pilot-process.mdx
+++ b/implementation/pilot-process.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Pilot Process'
 description: 'Overview of how the pilot process works'
-icon: 'magnifying-glass'
+icon: 'paper-plane'
 ---
 
 # Introduction
