Tiny introduction page changes
Added sample FHIR bundles to make available for download.

--- a/scheduled-appointments/introduction.mdx
+++ b/scheduled-appointments/introduction.mdx
@@ -1,11 +1,11 @@
 ---
 title: 'Intro'
-description: 'Example section for showcasing API endpoints'
+description: 'Scheduled Appointments API'
 ---
 
-<Note>
-  This documentation is a work in progress.
-</Note>
+# Welcome
 
-## Welcome
+This is the main API to be utilized when initiating patient request processing.
 
+This API is largely an asynchronous API call as patient data is not immediately returned
+to the client.
