--- a/responses/cloud-storage.mdx
+++ b/responses/cloud-storage.mdx
@@ -24,6 +24,8 @@ Part of the configuration is a templated object name which is where the document
 | `documentType`     | Document type                                                                  |
 | `ext`              | File extension - this is always required to be part of the configured location |
 
+A reasonable default would be `incoming_files/[yyyy]/[MM]/[dd]/[correlationId]_[mrn]_[patientLastName]_[documentType].[ext]`
+
 ## AWS S3 Setup
 
 We connect to AWS S3 using a federated web identity authz model. This allows for security without the need to exchange static secrets.
