--- a/product/risk-adjustment.mdx
+++ b/product/risk-adjustment.mdx
@@ -1,5 +1,9 @@
 ---
-title: 'Risk Adjustments'
-description: 'Information to help risk adjustments'
-icon: 'list-check'
+title: 'Risk Adjustment Suspecting'
+description: 'Clinical information to help capture risk adjustments'
+icon: 'magnifying-glass-chart'
 ---
+
+Connective Health provides an optional product to improve risk adjustment accuracy. This product identifies diagnoses from outside providers that are missing from the receiving provider’s EHR, then pulls supporting information, such as lab results or imaging reports, and flags them for the receiving provider.
+
+Risk Adjustment Suspecting is available for Medicare Advantage, ACA, and Medicaid risk models.
