PS-676: Add Product Content
Fix typo

--- a/product/structured-reports.mdx
+++ b/product/structured-reports.mdx
@@ -17,7 +17,7 @@ CSV format is a good choice when loading into a relational database or processin
 ## Excel
 
 Excel is a good choice when being reviewed by a human. Keep in mind that Excel has several limitations for
-column lengths which cannot be worked around and will likely truncate certain next from a note.
+column lengths which cannot be worked around and will likely truncate certain text from a note.
 
 ## Other
 
