removed SFTP as a return option

--- a/implementation/sample-project-steps.mdx
+++ b/implementation/sample-project-steps.mdx
@@ -16,7 +16,7 @@ the Connective Health Care Summary service.
     </Step>
     <Step title="EHR Implementation and Product Configuration">
         * Establish Care Summary request process (Connective Health API, EHR Integration, etc.)
-        * Determine return mechanism for the Care Summary. Options include Clinical Direct Message, SFTP, Fax, or Cloud delivery
+        * Determine return mechanism for the Care Summary. Options include Clinical Direct Message, Fax, or Cloud delivery
         * Finalize the clinical configurations (no technical work)
     </Step>
     <Step title="Test send of Patient Care Summaries to Clinic and Train Lead Person on Clinic">
