Add more prominence to the expected ARN the customer needs to return

--- a/responses/cloud-storage.mdx
+++ b/responses/cloud-storage.mdx
@@ -57,7 +57,7 @@ We connect to AWS S3 using a federated web identity authz model. This allows for
 	]
 }
 ```
-We will provide you with the appropriate Google Account `sub` value based on the environment (staging or production).
+Connective Health will provide you with the appropriate Google Account `sub` value based on the environment (staging or production).
 
 1. Under the role add new permissions
     1. The permissions should provide these permissions (at least):
@@ -90,4 +90,6 @@ We will provide you with the appropriate Google Account `sub` value based on the
     ]
 }
 ```
-On the Role page, under the Summary section there is an ARN value. Copy this value and provide it to Connective Health
+
+<Check>On the Role page, under the Summary section there is an ARN value. Copy this value and provide it to Connective Health</Check>
+
