Fix vital sign wording

--- a/product/fhir-data.mdx
+++ b/product/fhir-data.mdx
@@ -45,7 +45,7 @@ Base element is a [Bundle](https://www.hl7.org/fhir/R4/bundle.html) resource, in
 | [DocumentReference](https://www.hl7.org/fhir/R4/documentreference.html) (Notes)       | [US Core DocumentReference](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-documentreference.html)                                   | Includes reference to encounter. Based on Connective Health's patient summary template                                                                                                 |
 | [Condition](https://www.hl7.org/fhir/R4/condition.html) (Problems)                    | [US Core Condition Problems Health Concerns](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-condition-problems-health-concerns.html) | Includes all problems                                                                                                                                                                  |
 | [Procedure](https://www.hl7.org/fhir/R4/procedure.html)                               | [US Core Procedure](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-procedure.html)                                                   | Includes reference to encounter. Based on Connective Health's patient summary template                                                                                                 |
-| [Observation](https://www.hl7.org/fhir/R4/observation.html)                           | [US Core Vital Signs](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-vital-signs.html)                                               | Only the vital signs listed above are currently included in the FHIR bundle                                                                                                            |
+| [Observation](https://www.hl7.org/fhir/R4/observation.html)                           | [US Core Vital Signs](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-vital-signs.html)                                               | Only the vital signs listed here are currently included in the FHIR bundle                                                                                                             |
 | [Observation](https://www.hl7.org/fhir/R4/observation.html)                           | [US Core BMI](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-bmi.html)                                                               |                                                                                                                                                                                        |
 | [Observation](https://www.hl7.org/fhir/R4/observation.html)                           | [US Core Body Height](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-body-height.html)                                               |                                                                                                                                                                                        |
 | [Observation](https://www.hl7.org/fhir/R4/observation.html)                           | [US Core Body Temperature](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-body-temperature.html)                                     |                                                                                                                                                                                        |
